HVAC Backup 2/objects/Whatsapp_Log__c(1).object
<CustomObject>
    <description>object to store the whatsapp api logs</description>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Whatsapp Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WLOG-{00000}</displayFormat>
        <label>Whatsapp Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whatsapp Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>